--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -17,4 +17,46 @@
         android:label="fragment_catalog"
         tools:layout="@layout/fragment_catalog" />
 
+    <fragment
+        android:id="@+id/bookmarksFragment"
+        android:name="com.example.read.feature_bookmarks.presentation.ui.fragments.BookmarksFragment"
+        android:label="fragment_bookmarks"
+        tools:layout="@layout/fragment_bookmarks" />
+
+    <fragment
+        android:id="@+id/profileFragment"
+        android:name="com.example.read.feature_profile.presentation.ui.fragments.ProfileFragment"
+        android:label="fragment_profile"
+        tools:layout="@layout/fragment_profile" />
+
+    <fragment
+        android:id="@+id/signUpFragment"
+        android:name="com.example.read.feature_auth.presentation.ui.fragments.SignUpFragment"
+        android:label="fragment_sign_up"
+        tools:layout="@layout/fragment_sign_up">
+        <action
+            android:id="@+id/action_signUpFragment_to_singInFragment"
+            app:destination="@id/singInFragment"
+            app:popUpTo="@id/nav_graph"
+            app:popUpToInclusive="true" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/singInFragment"
+        android:name="com.example.read.feature_auth.presentation.ui.fragments.SingInFragment"
+        android:label="fragment_sign_in"
+        tools:layout="@layout/fragment_sign_in">
+        <action
+            android:id="@+id/action_singInFragment_to_signUpFragment"
+            app:destination="@id/signUpFragment"
+            app:popUpTo="@id/singInFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
+
+    <dialog
+        android:id="@+id/signUpSuccessDialogFragment"
+        android:name="com.example.read.feature_auth.presentation.ui.dialogs.SignUpSuccessDialogFragment"
+        android:label="fragment_sign_up_success_dialog"
+        tools:layout="@layout/fragment_sign_up_success_dialog" />
+
 </navigation>
