--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#FFD73437</color>
+    <color name="teal_pink">#FFE18688</color>
+    <color name="dark_gray">#FF484848</color>
+    <color name="gray">#FF6A6A6A</color>
+    <color name="green">#4CAF50</color>
 </resources>
