--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.Read" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Base.Theme.Read" parent="Theme.Material3.DayNight.NoActionBar">
+        <!-- Customize your light theme here. -->
+        <item name="colorPrimary">@color/white</item>
+        <item name="colorSecondary">@color/black</item>
+        <item name="colorTertiary">@color/red</item>
+        <item name="android:textColorPrimary">@color/black</item>
+        <item name="android:textColorSecondary">@color/dark_gray</item>
+        <item name="android:textColorTertiary">@color/gray</item>
+        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorOnSecondary">@color/white</item>
+        <item name="colorOnTertiary">@color/white</item>
+        <item name="colorError">@color/red</item>
+        <item name="colorSurface">@color/red</item>
+        <item name="colorOnSurface">@color/white</item>
+        <item name="android:statusBarColor">?colorTertiary</item>
+        <item name="colorAccent">@color/teal_pink</item>
+    </style>
+
+    <style name="Theme.Read" parent="Base.Theme.Read" />
 </resources>
